@@ -20,9 +20,14 @@
 | 🐣
 | Making a toReference public to enable reuse from kn-plugins
 | https://github.com/knative/client/pull/1203[#1203]
+
 | 🐣
 | Do not print serviceUID and configUID labels in service export result
 | https://github.com/knative/client/pull/1194[#1194]
+
+| ✨
+| Use server-side generated revision names by default now. For BYO revision names use `--revision name` for service commands
+| https://github.com/knative/client/issues/1144[#1144]
 |===
 
 ## v0.20.0 (2021-01-14)
